# textmerger

./: .cursorrules  .gitignore  BUILD.md  MANIFEST.in  Makefile  PKGBUILD  README.md  __main__.py  build-arch.sh  build-windows.bat  build_windows.py  pyproject.toml  requirements-windows.txt  requirements.txt  resources.py  resources.qrc  run_gui.sh  textmerger-1.0.0-1-any.pkg.tar.zst  textmerger.desktop
.github/: copilot-instructions.md
.github/workflows/: aur-publish.yml  build-and-release.yml  main.yml
build-publish-scripts/: .SRCINFO  PKGBUILD  PKGBUILD.local  build-appimage.sh  build-aur.sh  check_version_consistency.sh  ci-push-aur.sh  extract-release-notes.sh  git-release.sh  push-aur.sh  textmerger-1.2.0-1-any.pkg.tar.zst  textmerger-2.2.3.deb  textmerger-2.2.4.deb  textmerger-2.3.0.deb  textmerger-2.5.0.deb  textmerger-2.6.0.deb  update_project_info.sh
build-publish-scripts/pkg/textmerger/: .BUILDINFO  .MTREE  .PKGINFO
build-publish-scripts/src/TextMerger-1.0.6/: .gitignore  pyproject.toml
build-publish-scripts/src/TextMerger-1.0.6/aur-repo/: .SRCINFO  PKGBUILD
build-publish-scripts/src/TextMerger-1.0.6/build-publish-scripts/: build-aur.sh  push-aur.sh
build-publish-scripts/src/TextMerger-1.0.6/docs/: LICENSE
build-publish-scripts/src/TextMerger-1.0.6/textmerger.egg-info/: SOURCES.txt  requires.txt
build-publish-scripts/src/TextMerger-1.0.6/textmerger/translations/: strings_en.json  strings_tr.json  strings_vi.json
docs/: LICENSE  README.md  list_of_things_changed.md  release-notes.md
packaging/: textmerger.desktop
pkg/textmerger/: .BUILDINFO  .MTREE  .PKGINFO
pkg/textmerger/usr/share/applications/: textmerger.desktop
src/: README.md  resources_rc.py
src/core/: file_manager.py
src/translations/: strings_en.json
src/ui/components/: shortcut_editor.py
textmerger/: .SRCINFO  IMPLEMENTATION_PLAN.md  PKGBUILD  WALKTHROUGH.md  __init__.py  __main__.py  fetch_icons.cjs  fetch_icons.js  fix_updates.cjs  implementation_plan.md  index.html  package-lock.json  package.json  vite.config.ts
textmerger.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
textmerger/core/: file_manager.py
textmerger/reports/: missing_translations_report.json
textmerger/src/: App.svelte  app.css
textmerger/src-tauri/: Cargo.toml  tauri.conf.json
textmerger/src-tauri/.cargo/: config.toml
textmerger/src-tauri/capabilities/: default.json
textmerger/src-tauri/icons/: icon.icns
textmerger/src-tauri/src/: file_ops.rs  lib.rs
textmerger/src/lib/: FileTree.svelte  FileTreeNode.svelte
textmerger/src/lib/components/: FileIcon.svelte  KeybindRecorder.svelte  Modal.svelte  Settings.svelte
textmerger/src/lib/locales/: ar.json  de.json  en.json  es.json  fix_translations.py  fr.json  hi.json  it.json  ja.json  ko.json  nl.json  pl.json  pt.json  ru.json  tr.json  zh.json
textmerger/src/lib/stores/: i18n.ts  settings.ts  shortcuts.ts  tabs.ts  theme.ts
textmerger/translations/: strings_bn.json  strings_de.json  strings_en.json  strings_es.json  strings_fr.json  strings_hi.json  strings_it.json  strings_pt.json  strings_ru.json  strings_tr.json  strings_vi.json
textmerger/ui/: mainwindow.py
textmerger/ui/components/: droppable_text_edit.py  snackbar.py
textmerger/utils/: helpers.py  localization.py
ui/: mainwindow.py
