# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textmerger"
version = "1.2.1"
description = "A Python GUI application for merging text files"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "pierspad"},
]
dependencies = [
    "PyQt5>=5.15.0",
    "Flask>=2.0.0",
    "Werkzeug>=2.0.0",
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]

[project.optional-dependencies]
jupyter = ["nbformat>=5.0"]
pdf = ["PyPDF2>=2.0.0"]
all = ["nbformat>=5.0", "PyPDF2>=2.0.0"]

[project.scripts]
textmerger = "textmerger.__main__:main"

[project.urls]
Homepage = "https://github.com/pierspad/TextMerger"
Repository = "https://github.com/pierspad/TextMerger"
Issues = "https://github.com/pierspad/TextMerger/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["textmerger*"]

[tool.setuptools.package-data]
textmerger = [
    "assets/**/*",
    "translations/*",
]
