[package]
name = "textmerger"
version = "2.9.0"
description = "A Rust/Tauri GTK3 application for merging text files"
authors = ["you"]
license = "GPL-3.0-only"
repository = "https://github.com/pierspad/textmerger"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
rayon = "1.10.0"
content_inspector = "0.2.4"
tauri-plugin-fs = "2"
walkdir = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
glob = "0.3"
nom-exif = "2.0.2"
image = { version = "0.24", default-features = false, features = [
    "jpeg",
    "png",
    "gif",
    "webp",
    "bmp",
] }
mime_guess = "2.0"
pdf-extract = "0.7"


[profile.dev]
opt-level = 0
debug = 0
strip = "debuginfo"

[profile.dev.package."*"]
opt-level = 1

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
